--- a/i3/config
+++ b/i3/config
@@ -33,9 +33,10 @@ bindsym $mod+d exec --no-startup-id rofi -show run
 
 ################################################################################################
 
+
 # Start Applications
-bindsym Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
-bindsym $mod+Shift+Print exec --no-startup-id maim --select && sleep 2 | xclip -selection clipboard -t image/png && notify-send "Screenshot taken"
+bindsym Print exec --no-startup-id file="$HOME/Pictures/screenshots/$(date +%s).png" && maim -s -u "$file" && xclip -selection clipboard -t image/png "$file"
+bindsym $mod+Shift+Print exec --no-startup-id file="$HOME/Pictures/screenshots/$(date +%s).png" && maim -s -d 2 "$file" && xclip -selection clipboard -t image/png "$file" && notify-send "Screenshot taken"
 
 # Switch window between monitor
 bindsym $mod+Shift+bracketright move workspace to output right
@@ -58,8 +59,8 @@ bindsym $mod+b workspace back_and_forth
 bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_and_forth
 
 # split orientation
-bindsym $mod+Shift+v split h;exec notify-send 'tile horizontally'
-bindsym $mod+v split v;exec notify-send 'tile vertically'
+bindsym $mod+Shift+v split h
+bindsym $mod+v split v
 bindsym $mod+q split toggle
 
 # toggle fullscreen mode for the focused container
@@ -149,14 +150,6 @@ mode "resize" {
 
 # Lock screen
 bindsym $mod+l exec --no-startup-id i3lock -c 000000
-
-# Set background image
-exec_always --no-startup-id feh --randomize --bg-scale ~/Pictures/wallpapers/*
-
-# Custom autostart applications
-exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id python3 $HOME/.config/polybar/switch_workspaces.py > /tmp/workspace.log
-exec xrandr --output DVI-D-1 --right-of HDMI-1
 
 # Color palette used for the terminal ( $HOME/.Xresources file )
 # Colors are gathered based on the documentation:
@@ -255,3 +248,11 @@ bindsym $mod+Shift+F2 nop
 bindsym $mod+Shift+F3 nop
 bindsym $mod+Shift+F4 nop
 
+# Set background image
+exec_always --no-startup-id feh --randomize --bg-fill ~/Pictures/wallpapers/*
+exec compton
+
+# Custom autostart applications
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id python3 $HOME/.config/polybar/switch_workspaces.py > /tmp/workspace.log
+exec xrandr --output DVI-D-1 --right-of HDMI-1
