--- a/polybar/config
+++ b/polybar/config
@@ -69,7 +69,7 @@ background = ${c.background}
 modules-left = i4
 modules-center = date
 ;modules-right = temperature battery speed_eth speed_wifi cpu memory 
-modules-right = temperature wifi cpu memory 
+modules-right = temperature wifi cpu memory powermenu
 tray-position = right
 separator = " "
 
@@ -199,7 +199,7 @@ format-background = ${c.background}
 format-foreground = ${c.foreground}
 format-padding = ${globals.padding}
 
-label-open = 
+label-open = 
 label-open-foreground = ${colors.foreground}
 label-close = 
 label-close-foreground = ${colors.red}
@@ -212,6 +212,8 @@ menu-0-1 = 
 menu-0-1-exec = menu-open-2
 menu-0-2 = 
 menu-0-2-exec = menu-open-3
+menu-0-3 = 
+menu-0-3-exec = i3lock -c 000000
 
 menu-1-0 = reboot
 menu-1-0-exec = reboot
@@ -219,7 +221,7 @@ menu-1-1 = cancel
 menu-1-1-exec = menu-open-0
 
 menu-2-0 = power off
-menu-2-0-exec = backup && init 0
+menu-2-0-exec = init 0
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
@@ -234,4 +236,3 @@ screenchange-reload = true
 [global/wm]
 margin-top = 5
 margin-bottom = 5
-
